# lucas_lehmer

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: integration_test.rs
