[package]
name = "lucas_lehmer"
version = "0.1.1"
authors = ["Alexander Kluth <deralex@cpan.org>"]
readme = "README.md"
categories = [ "algorithms", "science" ]
keywords = [ "mersenne", "prime", "numbers", "lucas", "lehmer" ]
documentation = "https://docs.rs/lucas_lehmer"
homepage = "https://github.com/deralex/lucas_lehmer"
repository = "https://github.com/deralex/lucas_lehmer"
license = "MIT"
description = "Lucas-Lehmer primality test for Mersenne primes (M_{n}=2^{n}-1)"

[badges]
travis-ci = { repository = "deralex/lucas_lehmer" }
maintenance = { status = "actively-developed" }

[dependencies]
ramp = "0.5.9"
primal = "0.3.0"
num-integer = "0.1.44"
